# ContentScale

./: .replit  PAYPAL_INTEGRATION_GUIDE.md  SECURITY_INTEGRATION_CHECKLIST.md  add-api-keys.html  branding-replacement-code.js  db.ts  index.html  package-lock.json  package.json  payment.html  project-export.md  pyproject.toml  replit.md  replitAuth.ts  routes.ts  security-scripts.json  storage-chat-methods.ts  storage.ts
attached_assets/: .env.local  .env.production  ADMIN_PANEL_COMPLETE_FIX_SUMMARY.md  API_SETUP_GUIDE.md  COMPLETE_SYSTEM_CHANGES_DOCUMENTATION.md  ContentScale Application Verification Checklist_1751882312970.md  DEPLOYMENT_FIX_REPORT.md  EMAIL_SECURITY_ANALYSIS.md  ENHANCED_CHAT_SYSTEM_COMPLETE_GUIDE.md  FIX_SUMMARY_1751069606593.md  ISSUES_FOUND.md  Pasted--ContentScale-SEO-ROCKET-with-Sofeia-AI-Your-AI-Powered-Content-Strategy-Revolution-Meet-Sofe-1751419250222_1751419250223.txt  Pasted--TRAINING-THE-BOT-New-Scoring-Metrics-Added-AI-Overview-trigger-potential-High-Medium-Low--1751019607120_1751019607121.txt  Pasted--script-function-function-e-var-e-document-createElement-script-e-type-text-javascript-e-1751429711325_1751429711326.txt  Pasted-11-17-29-AM-Write-me-a-SEO-optimized-blogpost-Seed-Keyword-ContentScale-married-Sofeia-AI-W-1751773270913_1751773270914.txt  Pasted-Please-write-me-a-blokpost-Company-namen-Perfect-Roofing-Team-1500-words-7-52-50-PM-Professi-1751371641241_1751371641243.txt  PayPal Integration Fixes - Implementation Guide_1751878542380.md  SECURE_EMAIL_INSTALLATION_GUIDE.md  SECURITY_TESTING_PROCEDURES.md  chat_system_analysis.md  (+13 more)
(+116 files in other folders)
