[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "blinker==1.9.0",
    "click==8.2.1",
    "flask-cors==6.0.0",
    "flask-sqlalchemy==3.1.1",
    "flask==3.1.1",
    "greenlet==3.2.3",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "sqlalchemy==2.0.41",
    "typing-extensions==4.14.0",
    "werkzeug==3.1.3",
]
